--- a/No2/index.html
+++ b/No2/index.html
@@ -1,1 +1,6 @@
-kkk
+<!DOCTYPE html>
+<html lang="en-US">
+  <head>
+    <meta charset="utf-8">
+    <title>The Task 02</title>
+    <link rel="icon"
