--- a/No2/index.html
+++ b/No2/index.html
@@ -3,4 +3,4 @@
   <head>
     <meta charset="utf-8">
     <title>The Task 02</title>
-    <link rel="icon"
+    <link rel="icon" href="favicon.ico" type="image/x-icon"> 
