--- a/No2/index.html
+++ b/No2/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
-<html lang="en-US">
+<html lang="ja">
   <head>
     <meta charset="utf-8">
     <title>The Task 02</title>
     <link rel="icon" href="favicon.ico" type="image/x-icon"> 
-</html>    
+    <link rel="stylesheet" href="css-file.css">
+    <script src="js-file.js" defer></script>
+  </head>
+<h1>野村敏郎について</h1>
+</html>
