--- a/No2/index.html
+++ b/No2/index.html
@@ -9,4 +9,8 @@
   </head>
 <h1>野村敏郎について</h1>
 <h2>概要</h2>
-<p></p>
+<p>野村敏郎とは、灘中学校、灘高等学校（以下灘校）の地学教諭である。また、天文学者及びに砂金採り名人としても活動している。現在、中学生と高校生以上の文系地学の授業を担当しており、地学研究部の顧問であった。また、その独特の授業形態と後述の授業形態から、NMRの愛称で生徒より呼ばれている。</p>
+<h2>業績</h2>
+<h3>小惑星の発見</h3>
+<p>１９９４年までに二人の天文学者仲間と共に計１３個の小惑星を</p>
+</html>
