--- a/No2/index.html
+++ b/No2/index.html
@@ -3,14 +3,35 @@
   <head>
     <meta charset="utf-8">
     <title>The Task 02</title>
-    <link rel="icon" href="favicon.ico" type="image/x-icon"> 
-    <link rel="stylesheet" href="css-file.css">
-    <script src="js-file.js" defer></script>
+    <link rel="icon" href="https://user-images.githubusercontent.com/83213179/198303046-88f85fff-516d-49a8-974f-537d03cd6e32.png" type="image/x-icon"> 
   </head>
 <h1>野村敏郎について</h1>
 <h2>概要</h2>
 <p>野村敏郎とは、灘中学校、灘高等学校（以下灘校）の地学教諭である。また、天文学者及びに砂金採り名人としても活動している。現在、中学生と高校生以上の文系地学の授業を担当しており、地学研究部の顧問であった。また、その独特の授業形態と後述の授業形態から、NMRの愛称で生徒より呼ばれている。</p>
 <h2>業績</h2>
 <h3>小惑星の発見</h3>
-<p>１９９４年までに二人の天文学者仲間と共に計１３個の小惑星を</p>
+<p>１９９４年までに二人の天文学者仲間と共に計１３個の小惑星を発見、そのうち最新の３つを下に示す(Wikipediaより）</p>
+<ol>
+<il>１，小惑星番号８８９２、加古川</il>
+<br><il>２，小惑星番号５８８１、明石</il>
+<br><il>３，小惑星番号５６８５、福井実信</il>
+</ol>
+<h3>砂金採り</h3>
+<p>砂金採りを趣味の一つとして持っている。生徒を対象に砂金採りの方法を教育することもある。下に示す手段で参加できる。</p>
+<ol>
+  <il>・前期または後期の土曜講座の該当の講座を受講する</il>
+  <br><il>・地学研究部に参加する</il>
+</ol>
+<p>前者の方法は毎年抽選または受講制限が発生する程人気である。後者の方法は非常に興味があるならおススメだろう。</p>
+<h3>地学教育</h3>
+<p>前述の通り、灘校で教鞭を取っている。人生で少なくとも一回は受けるべき価値があるとも言われている。<br>また、日本天文学オリンピックで日本代表に対して講義を行ってもいるとの噂がある。</p>
+<h2>NMRドームに関する噂</h2>
+<p>野村は、灘校東館に天文台を所持している。それに関する噂は後を絶たない。
+</p>
+<p>核砲弾磁器投射砲ドーム（<i>Nuclear ammunition Magnetic Railgun Dome</i>）であるという噂
+<br>　　　これは<b>明らかなデマ</b>である。テレビ取材時の映像からもただの展望台であることが明らかである。
+<br>爆破しようと画策するものがいるという噂
+<br>　　　そのようなTwitterアカウントは<u>存在する</u>が、明らかなネタアカウントである。</p>
+<h3>参考リンク</h3>
+<p><a href="http://www.nada.ac.jp/">灘中学校・高等学校公式サイト</a> <a href="https://ja.wikipedia.org/wiki/%E3%83%A1%E3%82%A4%E3%83%B3%E3%83%9A%E3%83%BC%E3%82%B8">Wikipedia</a> <a href="https://user-images.githubusercontent.com/83213179/198303046-88f85fff-516d-49a8-974f-537d03cd6e32.png">使用ファビコン</a></p>
 </html>
