--- a/No3/index.html
+++ b/No3/index.html
@@ -1,5 +1,52 @@
 <!DOCTYPE html>
 <html lang="ja">
-  <head>
+
+<head>
     <meta charset="utf-8">
-    <title></title>
+    <title>127.0.0.1:5500/media.html</title>
+    <link rel="stylesheet" href="styles.css">
+
+</head>
+
+<body>
+    <h1>労働問題</h1>
+    <img src="job_it_dokata.png" width="400" height="400">
+    <p>まず、下の動画をご覧ください</p>
+    <video src=" https://github.com/NadaDigitalCommittee/Lecture2022/blob/main/03/karou.mp4?raw=true" controls
+        width="330" height="180"></video>
+    <p>次に、下のYouTubeの埋め込み動画をご覧ください</p>
+    <iframe width="806" height="453" src="https://www.youtube.com/embed/zEBw7lY2QXs"
+        title="【ワークライフ・ジャパン】 過労死はなくなるのか　犠牲者遺族に話を聞く" frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+        allowfullscreen></iframe>
+    <p>下の表をご覧ください</p>
+    <caption>労働時間と致命的な病気の発生率の関係<mbr>（国立がん研究センターによる調査）</caption>
+    <table>
+        <tr>
+            <th colspan="2" rowspan="2">発病率の比</th>
+            <th colspan="2">病名</th>
+        </tr>
+        <tr>
+            <th>急性心筋梗塞</th>
+            <th>脳卒中</th>
+        </tr>
+        <tr>
+            <th rowspan="3">労働時間</th>
+            <td>7~9時間</td>
+            <td>1.00</td>
+            <td>1.00</td>
+        </tr>
+        <tr>
+            <td>9~10時間</td>
+            <td>1.22</td>
+            <td>1.06</td>
+        </tr>
+        <tr>
+            <td>11~時間</td>
+            <td>1.63</td>
+            <td>0.83</td>
+        </tr>
+    </table>
+</body>
+
+</html>
