--- a/No3/index.html
+++ b/No3/index.html
@@ -20,7 +20,7 @@
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
         allowfullscreen></iframe>
     <p>下の表をご覧ください</p>
-    <caption>労働時間と致命的な病気の発生率の関係<mbr>（国立がん研究センターによる調査）</caption>
+    <caption>労働時間と致命的な病気の発生率の関係<br>（国立がん研究センターによる調査）</caption>
     <table>
         <tr>
             <th colspan="2" rowspan="2">発病率の比</th>
