--- a/No3/index.html
+++ b/No3/index.html
@@ -5,8 +5,18 @@
     <meta charset="utf-8">
     <title>127.0.0.1:5500/media.html</title>
     <link rel="stylesheet" href="styles.css">
+    <style>th{
+        width: 100px;
+        background-color: rgb(209, 128, 128);
+        color: white;
+    }
+    td{
+        width: 100px;
+        background-color: rgb(180, 224, 154);
+    }</style>
 
 </head>
+
 
 <body>
     <h1>労働問題</h1>
